list items added

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
         margin:0;
         padding: 0;
       }
+
+      html{
+        background-color: rgb(4, 151, 219);
+      }
     </style>
   </head>
   <body>
